--- a/src/style/jhy/less/defendTime.less
+++ b/src/style/jhy/less/defendTime.less
@@ -1,12 +1,8 @@
 .defendTime {
-  background-color: #e3e3e3;
   box-sizing: border-box;
-
-
   .selected {
     background: "#32e8fe";
   }
-
   #tab {
     position: relative;
     margin-left: 50px;
@@ -17,7 +13,7 @@
     position: absolute;
     top: 30px;
     left: -60px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .tr:nth-of-type(2)::before {
@@ -25,7 +21,7 @@
     position: absolute;
     top: 80px;
     left: -60px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .tr:nth-of-type(3)::before {
@@ -33,7 +29,7 @@
     position: absolute;
     top: 130px;
     left: -60px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .tr:nth-of-type(4)::before {
@@ -41,7 +37,7 @@
     position: absolute;
     top: 180px;
     left: -60px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .tr:nth-of-type(5)::before {
@@ -49,7 +45,7 @@
     position: absolute;
     top: 230px;
     left: -60px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .tr:nth-of-type(6)::before {
@@ -57,7 +53,7 @@
     position: absolute;
     top: 280px;
     left: -60px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .tr:last-of-type::before {
@@ -65,7 +61,7 @@
     position: absolute;
     top: 330px;
     left: -60px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
 
@@ -90,8 +86,8 @@
 
     user-select: none;
     // border-right: 1px solid #000;
-    border-top: 1px solid #d7d7d7;
-    border-bottom: 1px solid #d7d7d7;
+    border-top: 1px solid #cfcfcf;
+    border-bottom: 1px solid #cfcfcf;
   }
 
   .td:first-of-type {
@@ -126,7 +122,7 @@
     position: absolute;
     top: -28px;
     left: -5px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .td:nth-of-type(5)::after {
@@ -134,7 +130,7 @@
     position: absolute;
     top: -28px;
     left: -5px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .td:nth-of-type(9)::after {
@@ -142,7 +138,7 @@
     position: absolute;
     top: -28px;
     left: -5px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .td:nth-of-type(13)::after {
@@ -150,7 +146,7 @@
     position: absolute;
     top: -28px;
     left: -5px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .td:nth-of-type(17)::after {
@@ -158,7 +154,7 @@
     position: absolute;
     top: -28px;
     left: -5px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .td:nth-of-type(21)::after {
@@ -166,7 +162,7 @@
     position: absolute;
     top: -28px;
     left: -10px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .td:nth-of-type(25)::after {
@@ -174,7 +170,7 @@
     position: absolute;
     top: -28px;
     left: -10px;
-    color: #b9b5b5;
+    color: #595959
   }
 
   .td:nth-of-type(29)::after {
@@ -182,7 +178,7 @@
     position: absolute;
     top: -28px;
     left: -10px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .td:nth-of-type(33)::after {
@@ -190,7 +186,7 @@
     position: absolute;
     top: -28px;
     left: -10px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .td:nth-of-type(37)::after {
@@ -198,7 +194,7 @@
     position: absolute;
     top: -28px;
     left: -10px;
-    color: #b9b5b5;
+    color:#595959;
   }
 
   .td:nth-of-type(41)::after {
@@ -206,7 +202,7 @@
     position: absolute;
     top: -28px;
     left: -10px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .td:nth-of-type(45)::after {
@@ -214,7 +210,7 @@
     position: absolute;
     top: -28px;
     left: -10px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .td:nth-of-type(49)::after {
@@ -222,7 +218,7 @@
     position: absolute;
     top: -26px;
     left: -10px;
-    color: #b9b5b5;
+    color: #595959;
   }
 
   .td:nth-of-type(49)::before {
