--- a/src/style/jhy/less/equiplist.css
+++ b/src/style/jhy/less/equiplist.css
@@ -2,6 +2,7 @@
   height: 100%;
   padding: 30px;
   position: relative;
+  background: #f8f8f8;
 }
 .equip .clearfix::after {
   content: '';
@@ -13,52 +14,77 @@
   text-overflow: clip;
   white-space: nowrap;
 }
-.equip .mulelli {
-  display: webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
-  overflow: hidden;
+.equip .addEquip {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #efefef;
 }
-.equip .equipWrap {
+.equip .equipWrap .equipEle {
+  width: 100%;
+  height: 100%;
   position: relative;
 }
-.equip .equipWrap .deleteEquip {
-  font-size: 30px;
-  position: absolute;
-  color: #fff;
-  top: 5px;
-  right: 10px;
-  z-index: 10;
+.equip .equipWrap .equipEle .extraWrap {
+  border: 1px solid #efefef;
+  height: 18%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
-.equip .ant-card-body {
-  padding: 0;
+.equip .equipWrap .equipEle .extraWrap .extra {
+  padding: 5px 10px;
+  width: 33%;
+  border-right: 1px solid #e3e5eb;
+  text-align: center;
+  font-size: 15px;
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
-.equip .tit {
+.equip .equipWrap .equipEle .extraWrap .extra:first-of-type .expic {
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  margin-right: 10px;
+  background: url('../imgs/online.png') no-repeat left center / 100%;
+}
+.equip .equipWrap .equipEle .extraWrap .extra:nth-of-type(2) .expic {
+  width: 22px;
+  height: 22px;
+  margin-right: 10px;
+  display: inline-block;
+  background: url('../imgs/def.png') no-repeat left center / 100%;
+}
+.equip .equipWrap .equipEle .extraWrap .extra:last-of-type {
+  border-right: none;
+}
+.equip .equipWrap .equipEle .extraWrap .extra:last-of-type .expic {
+  display: inline-block;
+  width: 22px;
+  height: 22px;
+  margin-right: 10px;
+  background: url('../imgs/set.png') no-repeat left center / 100%;
+}
+.equip .equipWrap .equipEle .tit {
   position: absolute;
-  bottom: 45px;
+  bottom: 0;
   left: 0;
   background: rgba(36, 52, 74, 0.8);
   color: #fff;
   width: 100%;
-  padding: 1px 4px;
+  padding: 8px;
 }
-.equip .tit .titpoint {
+.equip .equipWrap .equipEle .tit .titpoint {
   display: inline-block;
   width: 10px;
   height: 10px;
   background: #fe7200;
   border-radius: 5px;
   margin: 0 10px;
-}
-.equip .extra {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.equip .extra img {
-  width: 16px;
-  height: 16px;
-  margin-right: 10px;
 }
 .equip .pagination {
   width: 100%;
