--- a/src/style/jhy/less/equiplist.css
+++ b/src/style/jhy/less/equiplist.css
@@ -11,7 +11,7 @@
 }
 .equip .elli {
   overflow: hidden;
-  text-overflow: clip;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
 .equip .addEquip {
