--- a/src/components/homePage/homeModel.less
+++ b/src/components/homePage/homeModel.less
@@ -7,6 +7,8 @@
     margin-right: 10px;
     position: relative;
     width: 100%;
+    display: flex;
+    align-items: center;
     .homeageImg{
       display: flex;
       flex-direction: row;
