--- a/src/style/ztt/css/recyclebin.less
+++ b/src/style/ztt/css/recyclebin.less
@@ -11,6 +11,14 @@
   }
   .gutter-example{
     padding: 15px 15px;
+    .nodata{
+      width: 100%;
+      text-align: center;
+    }
+    .nodata img{
+      width: 70px;
+      height: 70px;
+    }
     .gutter-row{
       margin: 15px 0;
       .gutter-box{
