--- a/src/style/jhy/less/timeset.less
+++ b/src/style/jhy/less/timeset.less
@@ -1,6 +1,14 @@
 .timeset {
   padding: 30px;
 
+  .radios {
+    display: block !important;
+  }
+
+  .radios:last-child {
+    margin-top: 50%;
+  }
+
   .ant-form-item {
     margin-bottom: 0;
   }
@@ -9,10 +17,6 @@
     width: 100%;
     text-align: center;
 
-    .submit {
-      background: #4a96fd;
-      color: #fff;
-    }
 
     .cancle {
       margin-left: 50px;
