--- a/src/components/police/ploceinfomation.css
+++ b/src/components/police/ploceinfomation.css
@@ -29,6 +29,7 @@
 .ploceinfomation .pagination {
   width: 100%;
   text-align: center;
+  padding-bottom: 20px;
 }
 .ploceinfomation .nodata {
   display: flex;
@@ -302,7 +303,7 @@
   height: 70%;
 }
 .ploceinfomation .ploceinfomation-main .main-right .up .equipName {
-  margin: 0 auto 20px auto;
+  margin: 0 auto 8px auto;
   width: 90%;
   height: 35px;
   color: #4159a1;
