--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -28,6 +28,7 @@
   .pagination{
     width: 100%;
     text-align: center;
+    padding-bottom: 20px;
   }
   .nodata{
     display: flex;
@@ -299,7 +300,7 @@
         width: 100%;
         height: 70%;
         .equipName{
-          margin:0 auto 20px auto;
+          margin:0 auto 8px auto;
           width: 90%;
           height: 35px;
           color: #4159a1;
