--- a/src/style/jhy/less/equipset.less
+++ b/src/style/jhy/less/equipset.less
@@ -2,6 +2,12 @@
   height: 100%;
   padding: 30px;
   position: relative;
+  background: #fff;
+
+  .formInfo {
+    background: #f8f8f8;
+
+  }
 
   .topbtn {
     position: absolute;
