--- a/src/style/ztt/css/recyclebin.less
+++ b/src/style/ztt/css/recyclebin.less
@@ -23,6 +23,8 @@
       margin: 15px 0;
       .gutter-box{
         position: relative;
+        min-height: 20vh;
+        border: 1px solid #dcdcdc;
         .recycleBg{
           position: absolute;
           bottom: 0;
@@ -63,6 +65,7 @@
       padding: 14px 0;
       border-right: 1px solid  #d5d8e0;
       font-size: 15px;
+      cursor: pointer;
     }
     .recycleBinBtn span:nth-child(2){
       display: inline-block;
@@ -70,6 +73,7 @@
       text-align: center;
       color: #737988;
       font-size: 15px;
+      cursor: pointer;
     }
   }
 }
