--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -450,7 +450,9 @@
 
   .alarminfor {
     margin: 12px 0 15px 0;
-
+    .gutter-box{
+      cursor: pointer;
+    }
     .alarminfornikName {
       display: flex;
       justify-content: flex-end;
