--- a/src/style/jhy/less/equipset.css
+++ b/src/style/jhy/less/equipset.css
@@ -2,6 +2,10 @@
   height: 100%;
   padding: 30px;
   position: relative;
+  background: #fff;
+}
+.equipset .formInfo {
+  background: #f8f8f8;
 }
 .equipset .topbtn {
   position: absolute;
