--- a/src/style/jhy/less/equipset.less
+++ b/src/style/jhy/less/equipset.less
@@ -45,6 +45,8 @@
     .frozentime {
       display: inline-block;
       width: 90%;
+      // .ant-slider .ant-slider-with-marks
+      margin-bottom: 0;
     }
   }
 
