--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -1,4 +1,7 @@
 .ploceinfomation{
+  .selectBorder{
+    border: 1px solid #006cff;
+  }
   .policeList{
     min-height: 14vh;
     border: 1px solid #d0c9c9;
