--- a/src/components/broadcast/broadcast.less
+++ b/src/components/broadcast/broadcast.less
@@ -39,7 +39,7 @@
     }
   }
   .broContext{
-    padding: 20px 0;
+    padding: 10px 20px;
     .nodata{
       width: 100%;
       text-align: center;
@@ -53,6 +53,7 @@
     position: relative;
     border: 1px solid #5a5555;
     min-height: 15vh;
+    margin: 10px 0;
     .videoBtn{
       width: 16%;
       position: absolute;
