--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -1,6 +1,6 @@
 .ploceinfomation{
   .selectBorder{
-    border: 1px solid #006cff;
+    border: 1px solid #006cff!important;
   }
   .policeList{
     min-height: 14vh;
@@ -496,13 +496,12 @@
   .gutter-row{
     background-color: #fff;
     padding: 20px 0;
-    border: 2px solid #F8F8F8;
+    border: 1px solid #F8F8F8;
     .gutter-box{
       position: relative;
       cursor: pointer;
       .policeStatus{
         display: inline-block;
-        //background-color: #006CE2;
         padding: 5px 10px;
         color: #fff;
         font-size: 13px;
