--- a/src/style/jhy/less/equipset.css
+++ b/src/style/jhy/less/equipset.css
@@ -11,6 +11,7 @@
   position: absolute;
   top: 30px;
   right: 20px;
+  z-index: 100;
 }
 .equipset .topbtn .ant-btn {
   margin-left: 20px;
@@ -33,6 +34,7 @@
 .equipset .sliderWrap .frozentime {
   display: inline-block;
   width: 90%;
+  margin-bottom: 0;
 }
 .equipset .sliderVal {
   position: absolute;
