各界面优化

--- a/src/style/jhy/less/equipset.less
+++ b/src/style/jhy/less/equipset.less
@@ -10,13 +10,14 @@
   }
 
   .topbtn {
-    position: absolute;
-    top: 30px;
-    right: 20px;
-    z-index: 100;
+    margin-bottom: 20px;
 
     .ant-btn {
       margin-left: 20px;
+    }
+
+    .ant-btn:first-child {
+      margin-left: 0;
     }
   }
 
@@ -25,7 +26,7 @@
   .onlyadd {
     .baseinfo {
       width: 250px;
-      line-height: 50px;
+      line-height: 40px;
       text-align: center;
       padding: 0 16px;
       background: #006fe4;
@@ -121,13 +122,13 @@
   }
 
   .ant-tabs-nav-container {
-    height: 50px !important;
+    height: 40px !important;
   }
 
   .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
     color: #646464 !important;
     background: #e5e5e5 !important;
-    height: 50px;
+    height: 40px;
     width: 250px;
     text-align: center;
 
@@ -144,7 +145,7 @@
   }
 
   .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
-    height: 50px;
+    height: 40px;
     color: #fff !important;
     background: #006fe4 !important;
 
