--- a/src/style/jhy/less/overview.less
+++ b/src/style/jhy/less/overview.less
@@ -3,11 +3,21 @@
   background: #f8f8f8;
   padding: 30px;
 
+  .elli {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .vcenter {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
   .ant-card-head {
     border: 0;
   }
-
-
 
   .ant-descriptions .ant-descriptions-item-label,
   .ant-descriptions .ant-descriptions-item-content {
