操作记录、报警

--- a/src/components/homePage/homeModel.css
+++ b/src/components/homePage/homeModel.css
@@ -123,7 +123,7 @@
 .homePageModel .homePageModelRight .deviceContext .nameDevice .manAlarm {
   border-right: 1px solid #dedee2;
   border-left: 1px solid #dedee2;
-  padding: 0 15px;
+  padding: 0 33px;
   color: #32419C;
 }
 .homePageModel .homePageModelRight .deviceContext .nameDevice .carBg {
@@ -131,7 +131,7 @@
 }
 .homePageModel .homePageModelRight .deviceContext .nameDevice .equName {
   display: inline-block;
-  padding: 0 8px 0 8px;
+  padding: 0 18px 0 8px;
   border-right: 1px solid #dedee2;
 }
 .homePageModel .homePageModelRight .deviceContext .nameDevice .equTimes {
@@ -161,6 +161,18 @@
 .homePageModel .homePageModelRight .alarmImg .policeBtn {
   width: 64%;
   margin: 8px 3px;
+}
+.homePageModel .homePageModelRight .alarmImg .policeBtn .handler {
+  color: #2a3394;
+  border-bottom: 1px solid #e2e2e2;
+  padding: 2px 0;
+}
+.homePageModel .homePageModelRight .alarmImg .policeBtn .handler .hanleTime {
+  padding-right: 10px;
+}
+.homePageModel .homePageModelRight .alarmImg .policeBtn .handler .hanleName {
+  padding-left: 12px;
+  border-left: 1px solid #e2e2e2;
 }
 .homePageModel .homePageModelRight .alarmImg .policeBtn Button {
   width: 100%;
