--- a/src/components/homePage/homeModel.less
+++ b/src/components/homePage/homeModel.less
@@ -119,7 +119,7 @@
         .manAlarm{
           border-right:1px solid #dedee2;
           border-left:1px solid #dedee2;
-          padding: 0 15px;
+          padding: 0 33px;
           color: #32419C;
         }
         .carBg{
@@ -127,7 +127,7 @@
         }
         .equName{
           display: inline-block;
-          padding:0 8px 0 8px;
+          padding:0 18px 0 8px;
           border-right:1px solid #dedee2;
         }
         .equTimes{
@@ -158,6 +158,18 @@
       .policeBtn{
         width: 64%;
         margin: 8px 3px;
+        .handler{
+          color: #2a3394;
+          border-bottom: 1px solid #e2e2e2;
+          padding: 2px 0;
+          .hanleTime{
+            padding-right: 10px;
+          }
+          .hanleName{
+            padding-left: 12px;
+            border-left: 1px solid #e2e2e2;
+          }
+        }
       }
       .policeBtn Button{
         width: 100%;
