--- a/src/style/ztt/css/recyclebin.less
+++ b/src/style/ztt/css/recyclebin.less
@@ -11,6 +11,10 @@
   }
   .gutter-example{
     padding: 15px 15px;
+    .pagination{
+      text-align: center;
+      padding: 16px 0;
+    }
     .nodata{
       width: 100%;
       text-align: center;
