--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -469,15 +469,11 @@
 
       .alarminfornikName-title {
         color: #066fff;
-        margin-right: 15px;
+        margin-right: 7px;
+        font-size: 15px;
       }
-
-      .alarminfornikNameBg {
-        width: 24px;
-        height: 14px;
-        background: url("../../style/ztt/imgs/next.png");
-        background-size: 100% 100%;
-        cursor: pointer;
+      .iconRight{
+        color: #066fff;
       }
     }
 
