--- a/src/style/jhy/less/equipset.less
+++ b/src/style/jhy/less/equipset.less
@@ -173,6 +173,10 @@
     height: auto;
   }
 
+  .cavwrap {
+    display: inline-block;
+    float: left;
+  }
 
   .defopt {
     height: 576px;
@@ -196,12 +200,12 @@
 
   }
 
-  .ant-list-bordered .ant-list-item {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
+  // .ant-list-bordered .ant-list-item {
+  //   display: flex;
+  //   flex-direction: row;
+  //   justify-content: center;
+  //   align-items: center;
+  // }
 
 
   .defopt::before,
@@ -226,12 +230,10 @@
 
 
 
-  // .again {
-  //   display: block;
-  //   margin: -80px auto;
-  //   background: #006fe4;
-  //   color: #fff;
-  // }
+  .again {
+    display: inline-block;
+    margin: 20% auto;
+  }
 
 
 
