--- a/src/components/layout/LayerHeader/index.less
+++ b/src/components/layout/LayerHeader/index.less
@@ -16,23 +16,16 @@
     display: flex;
     align-items: center;
     .logo{
-      width: 40px;
-      height: 40px;
-      background: url("../../../style/imgs/logoCricle.png") no-repeat;
+      width: 155px;
+      height: 44px;
+      background: url("../../../style/imgs/logoCricle.png");
       background-size: 100% 100%;
-    }
-    .logoFont{
-      width: 70px;
-      height: 28px;
-      background: url("../../../style/imgs/logonfont.png") no-repeat;
-      background-size: 100% 100%;
-      margin-left: 16px;
     }
     .secant{
       width: 2px;
       height: 32px;
       background: #132356;
-      margin: 0 20px;
+      margin: 0 22px 0 11px;
     }
     .logo-title{
       font-size: 27px;
