--- a/src/style/ztt/css/upgradeSystem.less
+++ b/src/style/ztt/css/upgradeSystem.less
@@ -12,12 +12,12 @@
   }
   .upLoadCon{
     .upBtn{
-      width: 260px;
+      width: 130px;
       height: 30px;
       background-color:#4B96FC;
       color: #fff;
       border: none;
-      margin: 10px 0;
+      margin:20px 0 0 120px;
     }
   }
 }
