布防时间完成

--- a/src/style/jhy/less/defendTime.less
+++ b/src/style/jhy/less/defendTime.less
@@ -1,8 +1,10 @@
 .defendTime {
   box-sizing: border-box;
+
   .selected {
     background: "#32e8fe";
   }
+
   #tab {
     position: relative;
     margin-left: 50px;
@@ -194,7 +196,7 @@
     position: absolute;
     top: -28px;
     left: -10px;
-    color:#595959;
+    color: #595959;
   }
 
   .td:nth-of-type(41)::after {
@@ -260,7 +262,7 @@
     .delete {
       margin-top: 19px;
       color: red;
-
+      display: block;
 
     }
   }
