报警下一个

--- a/src/style/jhy/less/defendTime.css
+++ b/src/style/jhy/less/defendTime.css
@@ -217,5 +217,6 @@
 .defendTime .deleteWrap .delete {
   margin-top: 19px;
   color: red;
+  display: block;
 }
 /*# sourceMappingURL=defendTime.css.map */
