--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -1,10 +1,9 @@
 .ploceinfomation{
   .selectBorder{
-    border: 1px solid #006cff!important;
+    border: 1px solid #ff7200!important;
   }
   .policeList{
     min-height: 14vh;
-    border: 1px solid #d0c9c9;
     background: #EEEEEE;
   }
   .ant-checkbox-wrapper{
@@ -285,7 +284,7 @@
           margin: 0 10px;
           width: 20px;
           height: 20px;
-          background-color: #b9b9b9;
+          background-color: #006fe3;
           display: flex;
           align-items: center;
           justify-content: center;
