--- a/src/components/police/ploceinfomation.css
+++ b/src/components/police/ploceinfomation.css
@@ -2,11 +2,10 @@
   background-color: #f0f2f5;
 }
 .ploceinfomation .selectBorder {
-  border: 1px solid #006cff !important;
+  border: 1px solid #ff7200 !important;
 }
 .ploceinfomation .policeList {
   min-height: 14vh;
-  border: 1px solid #d0c9c9;
   background: #EEEEEE;
 }
 .ploceinfomation .ant-checkbox-wrapper {
@@ -288,7 +287,7 @@
   margin: 0 10px;
   width: 20px;
   height: 20px;
-  background-color: #b9b9b9;
+  background-color: #006fe3;
   display: flex;
   align-items: center;
   justify-content: center;
