--- a/src/style/ztt/css/electronicMap.less
+++ b/src/style/ztt/css/electronicMap.less
@@ -1,20 +1,51 @@
 .electronicMap{
   position: relative;
-  .input-card{
+  .info{
     position: absolute;
-    bottom: 1%;
+    top: 0;
     right: 0;
+    padding: 10px 10px;
+    border-radius: 5px;
+    background-color: #fff;
+    font-size: 14px;
+    box-shadow: 1px  2px  5px  6px  rgba(0,0,0,0.1);
+  }
+  .container{
+    width: 100%;
+    height: 92vh;
+  }
+  .input-card{
+    font-size: 15px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 22rem;
+    border-radius: 10px;
+    padding: 16px 0 0 16px;
+    background-color: #fff;
+    box-shadow: 1px  2px  5px  6px  rgba(0,0,0,0.1);
     .input-item{
       height: 2.2rem;
-    }
-    .btn{
-      width: 6rem;
-      margin: 0 1rem 0 2rem;
-    }
-    .input-text{
-      width: 4rem;
-      margin-right:1rem;
+      cursor: pointer;
+      .input-text{
+        width: 5rem;
+      }
+      .btn{
+        width: 6rem;
+        margin: 0 1rem 0 2rem;
+        border: 1px solid #27a6f7;
+        background-color: #fff;
+        color:#27a6f7;
+        font-size: 14px;
+        padding: 5px 0;
+        border-radius: 30px;
+        outline: none;
+        cursor: pointer;
+      }
+      .input-text{
+        width: 4rem;
+        margin-right:1rem;
+      }
     }
   }
-
 }
